frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipiece-frontend
  labels:
    app: ipiece-frontend
spec:
  type: ClusterIP
  selector:
    app: ipiece-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
